# NSE-Analysis

./: .env.example  .gitignore  Dockerfile  Dockerfile.render  README.md  README_VPS.md  bootstrap_vps.sh  docker-compose.pipeline.yml  docker-compose.yml  render-supervisord.conf  setup_pipeline_cron.sh  start.ps1  start.sh
backend/: Dockerfile  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  scratch_query_db_check.py  scratch_query_test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_futures_chain.py
backend/app/: __init__.py  config.py  main.py
backend/app/analytics/: pnl_calculator.py
backend/app/api/: __init__.py
backend/app/api/v1/: alerts.py  analytics.py  auth.py  chat.py  dashboard.py  recommendations.py  scanner.py
backend/app/chatbot/: __init__.py  llm_provider.py  rag_engine.py  sql_agent.py
backend/app/core/: __init__.py  database.py  exceptions.py  security.py
backend/app/ml/: __init__.py  features.py
backend/app/models/: futures_chain.py
backend/app/notifications/: telegram.py
backend/app/scheduler/: celery_app.py  jobs.py
backend/app/schemas/: __init__.py
backend/app/services/: projection_engine.py
frontend/: .env.local  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: layout.tsx  page.tsx
frontend/src/components/: DashboardSidebar.tsx
frontend/src/lib/: api.ts
local_services/qdrant/storage/: raft_state.json
nginx/: nginx.conf
pipeline/: Dockerfile
pipeline/app/ingestion/: option_collector.py  spot_collector.py
scripts/: init_db.sql  run_local_services.ps1  setup_local_services.ps1  start_local_services.ps1  stop_local_services.ps1
(+16 files in other folders)
