[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nse-options-intelligence"
version = "1.0.0"
description = "NSE Options Probability Intelligence Platform — Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",

    # Settings & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # HTTP client
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Data processing
    "polars>=1.17.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # AI/ML
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.12.0",
    "scikit-learn>=1.5.0",

    # Notifications
    "aiosmtplib>=3.0.0",

    # Utilities
    "structlog>=25.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
